# token-budgets-python

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  holdout_corpus.json  lang_001_anthropic_t0.csv  lang_001_anthropic_t0.json  lang_001_anthropic_t07.csv  lang_001_anthropic_t07.json  lang_001_openai_t0.csv  lang_001_openai_t0.json  lang_001_openai_t07.csv  lang_001_openai_t07.json  lang_001_pre_hook_results.csv  lang_001_pre_hook_summary.json  lang_001_real_results.csv  lang_001_real_summary.json  lang_001_trace_results.csv  lang_001_trace_summary.json  pyproject.toml  temperature_variance_results.csv  temperature_variance_summary.json  token_budgets.py
experiments/: generate_holdout_corpus.py  holdout_results.csv  lang_001_pre_hook.py  lang_001_real.py  lang_001_trace.py  lang_001_trace_v2.py  run_holdout_validation.py  smoke.csv  smoke.json  temp_var_tight_claude.csv  temp_var_tight_claude.json  temp_var_tight_mini.csv  temp_var_tight_mini.json  temperature_variance.py  temperature_variance_results.csv  temperature_variance_summary.json  temperature_variance_v2_results.csv  temperature_variance_v2_summary.json  token_budgets.py  utility_metrics.py
mypy_plugin/: mypy.ini  setup.py
reproductions/: case_01_agpt_001.py  case_02_lang_001.py  case_03_lang_004.py  case_04_smag_004.py  case_05_gpte_002.py  langchain_real_results.csv  langchain_real_results_v2.csv  langchain_real_results_v2_full.csv  langchain_real_summary.json  langchain_real_summary_v2.json  langchain_real_summary_v2_full.json  langchain_real_validation.py  token_budgets.py  token_budgets_v2.py
(+24 files in other folders)
